Added nik3 photo

--- a/resume/gallery/index.html
+++ b/resume/gallery/index.html
@@ -9,6 +9,7 @@
     <ol class="rounded-list">
 	<li><a href="../img/nik1.jpg">Doot</a></li>
 	<li><a href="../img/nik2.jpg">Present</a></li>
+	<li><a href="../img/nik3.PNG">Babushka</a></li>
 
     </ol>
     <br />
