--- a/resume/index.html
+++ b/resume/index.html
@@ -50,6 +50,7 @@
     var imgs = [
         "img/nik1.jpg",
         "img/nik2.jpg",
+        "img/nik3.PNG",
     ];
     var rotatables = ["The Best Fed-Uber driver!"];
     var rotatablesIndex = 0;
