--- a/resume/gallery/index.html
+++ b/resume/gallery/index.html
@@ -10,6 +10,8 @@
 	<li><a href="../img/nik1.jpg">Doot</a></li>
 	<li><a href="../img/nik2.jpg">Present</a></li>
 	<li><a href="../img/nik3.PNG">Babushka</a></li>
+	<li><a href="../img/nik4.jpg">Hug</a></li>
+	<li><a href="../img/nik5.jpg">Star</a></li>
 
     </ol>
     <br />
