--- a/resume/index.html
+++ b/resume/index.html
@@ -9,7 +9,7 @@
     <marquee class="banner" scrollamount="30">
         <span class="rainbow">Did you think I forgot???</span>
     </marquee>
-    <h1 class="site-title flashing">Happy Birthday Nika!!!</h1>
+    <h1 class="site-title flashing">Happy Birthday Nyquil Grin!!!</h1>
     <nav class="site-navigation">
         <a href="">HOME</a>
         <a href="gallery/index.html">GALLERY</a>
@@ -51,6 +51,8 @@
         "img/nik1.jpg",
         "img/nik2.jpg",
         "img/nik3.PNG",
+        "img/nik4.jpg",
+        "img/nik5.jpg",
     ];
     var rotatables = ["The Best Fed-Uber driver!"];
     var rotatablesIndex = 0;
