--- a/resume/index.html
+++ b/resume/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8" />
-    <title>Nika Official Website</title>
+    <title>The Wonderful World of Boris Alguliev</title>
 	<link rel="stylesheet" href="style.css" />
 </head>
 <body>
