Added title, changed font

--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <title>Boris Alguliev's Resume</title>
+  </head>
 <body>
     <iframe src="resume.pdf"
     style="
