Moved showcase images

--- a/iching/index.html
+++ b/iching/index.html
@@ -518,37 +518,37 @@ html {
   <div class="row justify-content-center">
         <div class="col-lg-4 col-md-9 col-12 py-2">
           <div
-            class="border rounded position-relative portfolio-item overflow-hidden has-modal"><img src="/iching/_index/showcase/6.5in-Screen-1.jpg" class="portfolio-image img-fluid" alt=""><div class="position-absolute hover-overlay"></div>
+            class="border rounded position-relative portfolio-item overflow-hidden has-modal"><img src="/images/showcase/screen-1.jpg" class="portfolio-image img-fluid" alt=""><div class="position-absolute hover-overlay"></div>
                 <div class="content hidden"></div>
           </div>
         </div>
         <div class="col-lg-4 col-md-9 col-12 py-2">
           <div
-            class="border rounded position-relative portfolio-item overflow-hidden has-modal"><img src="/iching/_index/showcase/6.5in-Screen-2.jpg" class="portfolio-image img-fluid" alt=""><div class="position-absolute hover-overlay"></div>
+            class="border rounded position-relative portfolio-item overflow-hidden has-modal"><img src="/images/showcase/screen-2.jpg" class="portfolio-image img-fluid" alt=""><div class="position-absolute hover-overlay"></div>
                 <div class="content hidden"></div>
           </div>
         </div>
         <div class="col-lg-4 col-md-9 col-12 py-2">
           <div
-            class="border rounded position-relative portfolio-item overflow-hidden has-modal"><img src="/iching/_index/showcase/6.5in-Screen-3.jpg" class="portfolio-image img-fluid" alt=""><div class="position-absolute hover-overlay"></div>
+            class="border rounded position-relative portfolio-item overflow-hidden has-modal"><img src="/images/showcase/screen-3.jpg" class="portfolio-image img-fluid" alt=""><div class="position-absolute hover-overlay"></div>
                 <div class="content hidden"></div>
           </div>
         </div>
         <div class="col-lg-4 col-md-9 col-12 py-2">
           <div
-            class="border rounded position-relative portfolio-item overflow-hidden has-modal"><img src="/iching/_index/showcase/6.5in-Screen-4.jpg" class="portfolio-image img-fluid" alt=""><div class="position-absolute hover-overlay"></div>
+            class="border rounded position-relative portfolio-item overflow-hidden has-modal"><img src="/images/showcase/screen-4.jpg" class="portfolio-image img-fluid" alt=""><div class="position-absolute hover-overlay"></div>
                 <div class="content hidden"></div>
           </div>
         </div>
         <div class="col-lg-4 col-md-9 col-12 py-2">
           <div
-            class="border rounded position-relative portfolio-item overflow-hidden has-modal"><img src="/iching/_index/showcase/6.5in-Screen-5.jpg" class="portfolio-image img-fluid" alt=""><div class="position-absolute hover-overlay"></div>
+            class="border rounded position-relative portfolio-item overflow-hidden has-modal"><img src="/images/showcase/screen-5.jpg" class="portfolio-image img-fluid" alt=""><div class="position-absolute hover-overlay"></div>
                 <div class="content hidden"></div>
           </div>
         </div>
         <div class="col-lg-4 col-md-9 col-12 py-2">
           <div
-            class="border rounded position-relative portfolio-item overflow-hidden has-modal"><img src="/iching/_index/showcase/6.5in-Screen-6.jpg" class="portfolio-image img-fluid" alt=""><div class="position-absolute hover-overlay"></div>
+            class="border rounded position-relative portfolio-item overflow-hidden has-modal"><img src="/images/showcase/screen-6.jpg" class="portfolio-image img-fluid" alt=""><div class="position-absolute hover-overlay"></div>
                 <div class="content hidden"></div>
           </div>
         </div>
